# email_rust

./: Cargo.toml
.github/workflows/: general.yaml  rust.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs
src/tests/: health_check.rs
tests/: health_check.rs
